Logs module, soft delete, websocket chat

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL="postgresql://user:password@localhost:5432/project_management_db"
 # Application
 APP_PORT=3000
 NODE_ENV=development
+CLIENT_URL=http://your-client-url:port
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
