--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "db:migrate": "npx ts-node scripts/migrate.ts",
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
-    "db:seed": "node prisma/seed.js",
+    "db:seed": "ts-node prisma/seed.ts",
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
@@ -31,15 +31,19 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.0",
     "@nestjs/platform-express": "^11.1.11",
+    "@nestjs/platform-socket.io": "^11.1.11",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.5.0",
-    "@prisma/client": "^6.13.0",
+    "@nestjs/websockets": "^11.1.11",
+    "@prisma/client": "^6.19.1",
     "@types/multer": "^2.0.0",
     "@types/streamifier": "^0.1.2",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.8.0",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -54,26 +58,28 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
-    "@swc/cli": "^0.6.0",
+    "@swc/cli": "^0.7.9",
     "@swc/core": "^1.10.7",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.6",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^29.7.0",
+    "globals": "^17.0.0",
+    "jest": "^30.2.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.13.0",
+    "prisma": "^6.19.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
