--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "baseUrl": "./",
     "paths": {
       "src/*": ["src/*"],
-      "types/*": ["types/*"],
       "test/*": ["test/*"],
       "prisma/*": ["prisma/*"],
       "scripts/*": ["scripts/*"]
@@ -24,5 +23,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": ["src/**/*", "src/generated/**/*", "prisma/**/*.ts", "test/**/*.ts", "scripts/**/*.ts"]
 }
